# fct_qt_db_distributed_dqlite

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp
build-projetoDqlite-Desktop_Qt_6_5_1_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-projetoDqlite-Desktop_Qt_6_5_1_GCC_64bit-Debug/projetoDqlite_autogen/: deps
build-projetoDqlite-Desktop_Qt_6_5_1_GCC_64bit-Debug/projetoDqlite_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
